2006-09-30  fabian

    * Fixed a display bug when window size is set to larger than screen.
    
2006-09-29  fabian

    * Removed excessive NSLog info
    * Fixed a possible deadlock during resizing.
    * Fixed a bug in [VT100Screen resizeWidth:height:].
    * Fixed a bug in [VT100Screen setTab].
    * Added support for xterm's raise/lower window sequencies.
    * Cleaned outdated variables of VT100Screen.
    
2006-09-27  fabian

    * Reorganized Preference panel's UI
    * Updated websites
    * Incorporated the patch by Joseph Ates.
    
2006-09-26  fabian

    * Fixed a trackRect bug of our textview. Now the focus-follow-mouse is working again.
    * Fixed a bug of ignoring "Enable Growl" option.
    * Changed cursor to I-Beam.
    
2006-09-25  fabian

    * Added an option to disable close tab button and tab number.
    * Fixed support for xterm's resize CSI sequence support.
    
2006-09-24  fabian

    * Fixed a bug is PTYSession that causes crashes when a tab is dragged across window.
    * Added support for xterm's iconify/deiconify escape sequences.
    * Added support for xterm's window position escape sequences.
    
2006-9-23   fabian 

    * Re-implemented missing PseudoTerminal methods for Applescript.
    
2006-9-21   fabian

    * Fixed another bug that makes program crash when one clicks close tab button too fast.
    * Fixed a bug that causes incorrect tab status reports.
    * Fixed a bug that happens when one clears scrollback buffer.
    * Changed the version to 0.9.0 pre-release
    * Fixed a timing bug in [PTYSession updateDisplay]
    * Fixed a display bug when one searches for a string in scrollback buffer.
    * Fixed Cmd-Click to open URL
    
2006-9-20   fabian

    * Cleaned the code. Removed ITSessionMgr class. Improved stability.
    * Made "close session" warning dialog available upon clicking the close button.
    * Fixed a bug in Growl that causes crashes.
    
2006-9-18   fabian
